@@ -1,3 +1,8 @@
+The following changes have been made between John 1.7.6.1 and 1.7.6.2:
+
+* Added Intel AVX and AMD XOP instruction sets support for bitslice DES
+(with C compiler intrinsics).
+
 The following changes have been made between John 1.7.6 and 1.7.6.1:
 
 * Corrected a logic error introduced in JtR 1.7.4.2: in "single crack" mode,
@@ -184,4 +189,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.50 2010/07/12 02:37:42 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.51 2011/02/25 08:42:37 solar Exp $
